added R package dependency

--- a/data/renv/1_swiss_army_knives/1_swiss_army_knives.qmd
+++ b/data/renv/1_swiss_army_knives/1_swiss_army_knives.qmd
@@ -14,13 +14,14 @@ For registering regularly used packages as `swiss_army_knives`
 
 ```{r eval=FALSE}
 library(yaml)
+library(renv)
 library(tidyverse)
 library(data.table)
 library(sf)
 library(terra)
 
 
-#renv::activate()
+renv::activate()
 #renv::snapshot()
 
 ```
