--- a/posts/welcome/index.qmd
+++ b/posts/welcome/index.qmd
@@ -1,8 +1,9 @@
 ---
-title: "R dependency testing"
+title: "R Dependency Test"
 author: "Yonghun Suh"
 date: today
 categories: [Code]
+image: https://posit.co/wp-content/uploads/2023/07/MY-COPY-Backgrounds.png
 #comments: false
 ---
 
