--- a/posts/update/index.qmd
+++ b/posts/update/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: "More Coming... Stay Tuned!"
 author: "Yonghun Suh"
-date: today
+date: "Oct 7, 2024"
 #categories: [news, code, analysis]
 categories: [news]
 image: "https://upload.wikimedia.org/wikipedia/commons/c/c0/Coming_Soon_Under_Construction.jpg"
