--- a/about.qmd
+++ b/about.qmd
@@ -19,14 +19,28 @@ format:
     page-layout: full
 ---
 
+# YONGHUNI a.k.a. 옹동!
+
+I am known as various nicknames.
+
+![](images/clipboard-2641290819.png)
+
+-   ***옹동***
+-   ***스컹굴***
+-   ***대굴***
+-   ***도귤***
+-   ***붕붕이***
+-   ***꺽굴이***
+
 # Welcome to my blog!
+
 I recently got a Master's degree in Geography at Seoul National University(SNU), and am working as an assistant at Office of Information & Computing Center, College of Engineering, SNU.
 
 I am interested in leveraging high performance computing within the domain of Geography, GIScience, machine learning, and remote sensing. My thesis of master degree involves real-time monitoring of landslide susceptibility using high-resolution active remote sensing data.
 
 I completed my undergraduate studies at Kongju National University, earning a B.A. in Geography and a B.Sc. in Atmospheric Science, with a cumulative GPA of 3.81/4.50. Throughout my academic journey, I've published several research papers and presented at various conferences, exploring topics like landslide prediction, population density estimation, and the impact of air pollution.
 
-In addition to my research, I'm involved in a community-based air quality project at the University at Buffalo and manage GPU clusters for the College of Engineering at SNU. I'm skilled in programming with R, Python, and CUDA, and I have extensive experience with GIS and remote sensing software.
+In addition to my research, I'm involved in a community-based air quality project at the State University at Buffalo and manage GPU clusters for the College of Engineering at SNU. I'm skilled in programming with R, Python, and Julia, and I have extensive experience with GIS and remote sensing software.
 
 I also have served as a teaching assistant for courses in spatial analytics and computer cartography, helping to nurture the next generation of spatial experts.
 
@@ -36,5 +50,4 @@ Feel free to explore my blog for insights into my research, projects!
 
 You can either view or [download](https://github.com/YONGHUNI/blog/blob/main/data/about/CV_Yonghun_Suh_240912.pdf){target="_blank"} my CV here!
 
-![](./data/about/CV_Yonghun_Suh_240912.pdf){width=100% height=1000px}
-
+![](./data/about/CV_Yonghun_Suh_240912.pdf){width="100%" height="1000px"}
