render test: rerun pyenv setup

--- a/data/pyenvsetting/index.qmd
+++ b/data/pyenvsetting/index.qmd
@@ -29,7 +29,7 @@ library(reticulate)
 #use_condaenv("C:\\Users\\dydgn\\anaconda3\\envs\\baseline\\python.exe", required = TRUE)
 
 # For github actions to activate CI/CD
-use_miniconda("/usr/share/miniconda/envs/baseline/bin/python", required = TRUE)
+use_condaenv("/usr/share/miniconda/envs/baseline/bin/python", required = TRUE)
 
 ```
 
