--- a/404.qmd
+++ b/404.qmd
@@ -1,5 +1,6 @@
 ---
 title: Uh oh... It Seems Something Went wrong
+comments: false
 ---
 
 The page you requested cannot be found (perhaps it was moved or renamed).
