--- a/404.qmd
+++ b/404.qmd
@@ -6,3 +6,5 @@ comments: false
 The page you requested cannot be found (perhaps it was moved or renamed).
 
 You may want to try searching to find the page's new location.
+
+![](data/404/carto_404.jpg)
