--- a/about.qmd
+++ b/about.qmd
@@ -25,7 +25,7 @@ I recently got a Master's degree in Geography at Seoul National University(SNU),
 
 I am interested in leveraging high performance computing within the domain of Geography, GIScience, machine learning, and remote sensing. My thesis of master degree involves real-time monitoring of landslide susceptibility using high-resolution active remote sensing data.
 
-I completed my undergraduate studies at Kongju National University, earning a B.A. in Geography and a B.Sc. in Atmospheric Science, with a cumulative GPA of 3.81/4.50. Throughout my academic journey, I've published several research papers and presented at various conferences, exploring topics like landslide prediction, population density estimation, and the impact of air pollution.
+I completed my undergraduate studies at Kongju National University, earning a B.A. in Geography and a B.Sc. in Atmospheric Science. Throughout my academic journey, I've published several research papers and presented at various conferences, exploring topics like landslide prediction, population density estimation, and the impact of air pollution.
 
 In addition to my research, I'm involved in a community-based air quality project at the State University at Buffalo and manage GPU clusters for the College of Engineering at SNU. I'm skilled in programming with R, Python, and Julia, and I have extensive experience with GIS and remote sensing software.
 
