--- a/404.qmd
+++ b/404.qmd
@@ -1,10 +1,12 @@
 ---
 title: Uh oh... It Seems Something Went wrong
 comments: false
+image: data/404/carto_404.jpg
+about:
+  template: jolla
 ---
 
 The page you requested cannot be found (perhaps it was moved or renamed).
 
 You may want to try searching to find the page's new location.
 
-![](data/404/carto_404.jpg)
