--- a/about.qmd
+++ b/about.qmd
@@ -1,7 +1,8 @@
 ---
 title: "About"
-image: https://avatars.githubusercontent.com/u/62800337?v=4
 about:
+  id: hero-heading
+  image: https://avatars.githubusercontent.com/u/62800337?v=4
   template: trestles
   links:
     - text: "{{< ai orcid >}}  ORCID"
@@ -17,27 +18,156 @@ about:
 format: 
   html:
     page-layout: full
+    lightbox: true
 
 include-in-header: ./misc/giscus-mode-toggle.html
 include-after-body: ./misc/div-giscus.html
 ---
 
-# Welcome to my blog!
+:::{#hero-heading}
+# About Me
 
-I recently got a Master's degree in Geography at Seoul National University(SNU), and am working as an assistant at Office of Information & Computing Center, College of Engineering, SNU.
+I am a system administrator of two GPU clusters in the Office of Information & Computing Center, at College of Engineering, Seoul National University (SNU). I finished my master's in Geography at SNU in Feb. 2024, advised by Dr. Gunhak Lee.
 
 I am interested in leveraging high performance computing within the domain of Geography, GIScience, machine learning, and remote sensing. My thesis of master degree involves real-time monitoring of landslide susceptibility using high-resolution active remote sensing data.
 
 I completed my undergraduate studies at Kongju National University, earning a B.A. in Geography and a B.Sc. in Atmospheric Science. Throughout my academic journey, I've published several research papers and presented at various conferences, exploring topics like landslide prediction, population density estimation, and the impact of air pollution.
 
-In addition to my research, I'm involved in a community-based air quality project at the State University at Buffalo and manage GPU clusters for the College of Engineering at SNU. I'm skilled in programming with R, Python, and Julia, and I have extensive experience with GIS and remote sensing software.
+In addition to my research, I'm involved in a community-based air quality project at the State University of New York at Buffalo([UB Clean Air](https://ubairqualitystudy.github.io/EPA-Website/index.html)) and manage GPU clusters for the College of Engineering at SNU. I'm skilled in programming with R, Python, and Julia, and I have extensive experience with GIS and remote sensing software.
 
-I also have served as a teaching assistant for courses in spatial analytics and computer cartography, helping to nurture the next generation of spatial experts.
+:::
 
-Feel free to explore my blog for insights into my research, projects!
+
+# Education
+
+## Seoul National University
+
+#### Seoul, South Korea | Sept 2021 – Feb 2024
+
+* M.A. in Geography
+
+
+## Kongju National University
+
+#### South Chungcheong Province, South Korea | Mar 2015 – Aug 2021
+* B.A.  in Geography
+* B.Sc. in Atmospheric Science
+
+\
+
+# Research Highlights
+
+
+## Predicting Landslide Susceptibility Using High-resolution Active Remote Sensing Data: An Interpretable Machine Learning Approach
+
+\
+
+::: {.grid}
+
+::: {.g-col-6}
+
+![](./data/about/publication_figure/landslide.PNG)
+
+:::
+
+::: {.g-col-6}
+
+* This study presents a machine learning model to predict landslide susceptibility using Interferometric SAR displacement data and Hybrid Surface Rainfall estimates, emphasizing the role of active remote sensing.
+
+* The findings highlight the potential of using remote sensing data for landslide susceptibility assessment, offering valuable insights for disaster preparedness and mitigation strategies.
+
+* [Published](https://journal.cartography.or.kr/articles/article/GmX8/){target="_blank"} in *Journal of the Korean Cartographic Association* with [Dr. Gunhak Lee](https://geog.snu.ac.kr/bbs/board.php?tbl=bbs13&mode=VIEW&num=11&category=&findType=&findWord=&sort1=&sort2=&it_id=&shop_flag=&mobile_flag=&language=EN&page=1){target="_blank"}.
+
+
+:::
+
+:::
+
+
+\
+
+## Delayed effects of air pollution on public bike-sharing system use in Seoul, South Korea: A time series analysis
+\
+
+::: {.grid}
+
+::: {.g-col-6}
+
+![](./data/about/publication_figure/PBS.PNG)
+
+:::
+
+::: {.g-col-6}
+
+* This study examines the short-term impact of ambient air pollution on public bike-sharing system (PBS) usage in Seoul from 2018 to 2021, finding a consistent negative association between elevated levels of air pollutants (PM2.5, PM10, NO2, and O3) and bike usage the following day.
+
+* The analysis reveals that high pollution days are linked to a reduction in cycling behavior, with no variations based on age, COVID-19, or seasonality.
+
+* [Published](https://doi.org/10.1016/j.socscimed.2024.117030){target="_blank"} in *Social Science & Medicine* with [Dr. Eun-Hye Yoo](https://scholar.google.com/citations?user=eDHJqA8AAAAJ&hl=en&oi=sra){target="_blank"} and [Dr. John E. Roberts](https://scholar.google.com/citations?user=KaPG9wwAAAAJ&hl=en&oi=sra){target="_blank"}.
+
+
+:::
+
+:::
+
+\
+
+## Estimation of the de Facto Population at the Building Scale Using a Dasymetric Mapping Method Based on GWR
+\
+
+::: {.grid}
+
+::: {.g-col-6}
+
+![](./data/about/publication_figure/dasymetric.PNG)
+
+:::
+
+::: {.g-col-6}
+
+* This study proposes a method using geographically weighted regression(GWR) and dasymetric mapping to estimate fine-scale population in buildings, addressing the challenges of COVID-19 transmission in urban areas.
+* By utilizing building usage and floor area as auxiliary data, it provides detailed population distribution estimates for Seoul, which can inform effective pandemic response strategies.
+* [Published](https://journal.cartography.or.kr/articles/article/Ad7w/#Abstract){target="_blank"} in *Journal of the Korean Cartographic Association* with [Dr. Gunhak Lee](https://geog.snu.ac.kr/bbs/board.php?tbl=bbs13&mode=VIEW&num=11&category=&findType=&findWord=&sort1=&sort2=&it_id=&shop_flag=&mobile_flag=&language=EN&page=1){target="_blank"}.
+
+:::
+
+:::
+
+\
+
+
+
+## Accessibility Analysis of Public Cooling Shelters in Seoul Considering Local Temperature: Focusing on the Elderly Population
+
+\
+
+::: {.grid}
+
+::: {.g-col-6}
+
+![](./data/about/publication_figure/heatwave_vulnerability.PNG)
+
+:::
+
+::: {.g-col-6}
+
+* This study aimed to identify vulnerable areas and inform heatwave policy decisions.
+* It examined vulnerability using local Bi-var Moran's I, analyzing the spatial accessibility of heatwave shelters for the elderly and temperature variations in Seoul.
+* The findings were presented at the *2022 Annual Conference of the Korean Geographical Society*.
+
+:::
+
+:::
+
+\
+\
+
 
 # CV
 
 You can either view or [download](https://github.com/YONGHUNI/blog/blob/main/data/about/CV_Yonghun_Suh_240912.pdf){target="_blank"} my CV here!
 
 ![](./data/about/CV_Yonghun_Suh_240912.pdf){width="100%" height="1000px"}
+
+
+
