--- a/posts/pyenvsetting/index.qmd
+++ b/posts/pyenvsetting/index.qmd
@@ -27,11 +27,20 @@ format:
 ```{r}
 library(reticulate)
 
-# For my Windows Environment
-#use_condaenv("C:\\Users\\dydgn\\anaconda3\\envs\\baseline\\python.exe", required = TRUE)
 
-# For github actions to activate CI/CD
-use_condaenv("/home/runner/micromamba/envs/baseline/bin/python", required = TRUE)
+
+if (Sys.info()[[1]]=="Windows") {
+        
+    # For my Windows Environment
+    use_condaenv("C:\\Users\\dydgn\\anaconda3\\envs\\baseline\\python.exe", required = TRUE)    
+    
+    } else{
+    
+    # For github actions to activate CI/CD
+    use_condaenv("/home/runner/micromamba/envs/baseline/bin/python", required = TRUE)   
+    
+}
+
 
 ```
 
