--- a/about.qmd
+++ b/about.qmd
@@ -1,5 +1,7 @@
 ---
 title: "Yonghun Suh"
+aliases:
+  - /about/
 about:
   id: hero-heading
   image: https://avatars.githubusercontent.com/u/62800337?v=4
