--- a/404.qmd
+++ b/404.qmd
@@ -3,7 +3,7 @@ title: Uh oh... It Seems Something Went wrong
 aliases:
   - /404/
 comments: false
-image: data/404/carto_404.jpg
+image: /data/404/carto_404.jpg
 about:
   template: jolla
 ---
