--- a/404.qmd
+++ b/404.qmd
@@ -1,9 +1,7 @@
 ---
 title: Uh oh... It Seems Something Went wrong
-aliases:
-  - /404/
 comments: false
-image: /data/404/carto_404.jpg
+image: https://github.com/YONGHUNI/blog/blob/main/data/404/carto_404.jpg?raw=true
 about:
   template: jolla
 ---
