content(About page/Me): disabled title-block-banner

--- a/about/blog/index.qmd
+++ b/about/blog/index.qmd
@@ -15,6 +15,7 @@ about:
     - text: '![Quarto](/data/_quarto/icon/logo-quarto.png) Quarto official website'
       href: https://quarto.org/
       target: _blank
+title-block-banner: true
 
 
 #format: 
