--- a/posts/shinylive/index.qmd
+++ b/posts/shinylive/index.qmd
@@ -52,6 +52,7 @@ Credit: [Using Leaflet with Shiny](https://rstudio.github.io/leaflet/articles/sh
 
 
 library(shiny)
+library(shinylive)
 library(leaflet)
 library(RColorBrewer)
 
