post(new): shinylive & quartolive

--- a/posts/shinystandalone/index.qmd
+++ b/posts/shinystandalone/index.qmd
@@ -6,7 +6,7 @@ categories: [Code]
 #image: 
 #engine: knitr
 format: 
-  html:
+  live-html:
     resources:
       - ./data/shinylive-sw.js
     #page-layout: full
