--- a/posts/shinystandalone/index.qmd
+++ b/posts/shinystandalone/index.qmd
@@ -7,8 +7,8 @@ categories: [Code]
 #engine: knitr
 format: 
   live-html:
-    resources:
-      - ./data/shinylive-sw.js
+    #resources:
+    #  - ./data/shinylive-sw.js
     #page-layout: full
     ##https://quarto.org/docs/authoring/article-layout.html
     toc: false
