--- a/about/me/index.qmd
+++ b/about/me/index.qmd
@@ -21,6 +21,8 @@ format:
     page-layout: full
     lightbox: true
     css: /data/about/grid.css
+    embed-resources: true
+
     
 ---
 
@@ -184,9 +186,18 @@ In addition to my research, I'm involved in a community-based air quality projec
 
 # CV
 
-You can either view or [download](https://github.com/YONGHUNI/blog/blob/main/data/about/CV_Yonghun_Suh.pdf){target="_blank"} my CV here!
+Feel free to check out my CV below! ![](https://partyparrotasaservice.vercel.app/api/partyparrot?overlay=&overlayWidth=20&overlayHeight=20&overlayOffsetX=0&overlayOffsetY=0){width=25px height=25px style="vertical-align:middle;"}
 
-![](/data/about/CV_Yonghun_Suh.pdf){width="100%" height="1000px"}
+
+
+<object 
+  data="../../data/about/CV_Yonghun_Suh.pdf" 
+  type="application/pdf" 
+  width="100%" 
+  height="1000px">
+  If the PDF is not visible on mobile, 
+  <a href="https://github.com/YONGHUNI/blog/blob/main/data/about/CV_Yonghun_Suh.pdf?raw=true">click here</a>.
+</object>
 
 
 
