--- a/about/me/index.qmd
+++ b/about/me/index.qmd
@@ -1,6 +1,8 @@
 ---
 title: "Yonghun Suh"
 subtitle: "*Enabling HPC in Geography*"
+resources:
+  - /data/about/CV_Yonghun_Suh.pdf
 about:
   id: hero-heading
   image: https://avatars.githubusercontent.com/u/62800337?v=4
@@ -21,9 +23,10 @@ format:
     page-layout: full
     lightbox: true
     css: /data/about/grid.css
+    self-contained: false
     embed-resources: true
-resources:
-  - /data/about/CV_Yonghun_Suh.pdf
+    
+
 
 
     
